--- a/paymentservice/src/main/resources/application.properties
+++ b/paymentservice/src/main/resources/application.properties
@@ -4,6 +4,6 @@ razorpay.key_secret=${RAZORPAY_KEY_SECRET}
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/paymentservice12apr
 spring.datasource.username=root
-spring.datasource.password=namannaman
+spring.datasource.password=gopich
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql: true
