--- a/productservice-master/src/main/resources/application.properties
+++ b/productservice-master/src/main/resources/application.properties
@@ -14,7 +14,7 @@ server.error.include-stacktrace=never
 spring.jpa.hibernate.ddl-auto=validate
 spring.datasource.url=jdbc:mysql://localhost:3306/sep23productservice
 spring.datasource.username=root
-spring.datasource.password=namannaman
+spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 #logging.level.org.hibernate.SQL=DEBUG
