--- a/productservice-master/Dockerfile
+++ b/productservice-master/Dockerfile
@@ -1,9 +1,4 @@
 FROM openjdk:17
+LABEL authors="gopi"
 
-#sudo apt-get update
-#sudo apt-get install
-#sudo apt-get install java
-
-COPY target/productServiceSST9Mar-0.0.1-SNAPSHOT.jar app.jar
-
-ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT ["top", "-b"]
