--- a/productservice-master/Dockerfile
+++ b/productservice-master/Dockerfile
@@ -1,9 +1,9 @@
 FROM openjdk:17
 LABEL authors="gopi"
 
-#sudo apt-get update
-#sudo apt-get install
-#sudo apt-get install java
 
+COPY target/filename.jar /app/filename.jar
 
-ENTRYPOINT ["java", "-jar", "app.jar"]
+WORKDIR /app
+
+ENTRYPOINT ["java", "-jar", "filename.jar"]
